# kimm_kortex_custom

./: CMakeLists.txt  README.md  package.xml
config/: gen3.xml
include/example/: move_to_home_position.hpp
include/simulation/: velocity_mujoco.hpp
include/utilities/: kinova_utilities.hpp
launch/: move_to_home_position.launch  simulation.launch
src/example/: move_to_home_position.cpp
src/simulation/: velocity_mujoco.cpp
src/utilities/: kinova_utilities.cpp  math_functions.cpp  pin_to_urdf.cpp  urdf_to_pin.cpp
